--- a/src/stylesheet/_footer.scss
+++ b/src/stylesheet/_footer.scss
@@ -46,6 +46,31 @@
     padding-bottom: 2rem;
   }
 }
+@media only screen and (max-width: 664px) and (min-width: 426px) {
+  .footer {
+    padding: 2rem;
+    .links {
+      position: absolute;
+      top: 50%;
+      transform: translateY(-50%);
+    }
+    .footer-arr {
+      text-align: center;
+      position: absolute;
+      width: 100%;
+      left: 0%;
+      transform: translateX(0%);
+      small {
+        color: rgb(255, 255, 255);
+        font-size: 0.8rem;
+        width: 100%;
+        padding: 0;
+      }
+      bottom: 0;
+      padding-bottom: 0rem;
+    }
+  }
+}
 @media only screen and (max-width: 425px) and (min-width: 320px) {
   .footer {
     padding: 1rem;
