--- a/src/stylesheet/style.css
+++ b/src/stylesheet/style.css
@@ -531,7 +531,164 @@ textarea {
   }
 }
 
+@media only screen and (max-width: 664px) and (min-width: 426px) {
+  .hero {
+    margin-top: 5rem;
+    position: relative;
+    height: auto;
+    width: 100%;
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 20% 80%;
+        grid-template-columns: 20% 80%;
+    margin-bottom: 8rem;
+  }
+  .hero .hero-text {
+    grid-row-start: 2/3;
+    grid-column-start: 2/3;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    height: -webkit-fit-content;
+    height: -moz-fit-content;
+    height: fit-content;
+    width: 400px;
+    margin-top: 2rem;
+  }
+  .hero .hero-text h1 {
+    font-size: var(--big-font-size);
+    font-weight: var(--font-semi-bold);
+    color: var(--title-color);
+  }
+  .hero .hero-text small {
+    font-size: var(--normal-font-size);
+    color: var(--text-color);
+    margin-bottom: var(--mb-0-75);
+  }
+  .hero .hero-text p {
+    font-size: var(--small-font-size);
+    color: var(--text-color);
+    width: 100%;
+    margin-bottom: var(--mb-2);
+    line-height: 1.3rem;
+  }
+  .hero .hero-image {
+    height: 250px;
+    width: auto;
+    -ms-grid-row: 1;
+    -ms-grid-column: 2;
+    grid-area: 1/2;
+    position: relative;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: left;
+        -ms-flex-pack: left;
+            justify-content: left;
+  }
+  .hero .hero-image .hero-image-container {
+    position: relative;
+    height: 250px;
+    width: 250px;
+    border-radius: 47% 53% 49% 51% / 36% 30% 70% 64%;
+    background: var(--first-color);
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    overflow: hidden;
+  }
+}
+
 @media only screen and (max-width: 425px) and (min-width: 375px) {
+  .hero {
+    margin-top: 5rem;
+    position: relative;
+    height: auto;
+    width: 100%;
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 27% 73%;
+        grid-template-columns: 27% 73%;
+    margin-bottom: 8rem;
+  }
+  .hero .hero-text {
+    grid-row-start: 2/3;
+    grid-column-start: 2/3;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    height: -webkit-fit-content;
+    height: -moz-fit-content;
+    height: fit-content;
+    width: 300px;
+  }
+  .hero .hero-text h1 {
+    font-size: var(--big-font-size);
+    font-weight: var(--font-semi-bold);
+    color: var(--title-color);
+  }
+  .hero .hero-text small {
+    font-size: var(--normal-font-size);
+    color: var(--text-color);
+    margin-bottom: var(--mb-0-75);
+  }
+  .hero .hero-text p {
+    font-size: var(--small-font-size);
+    color: var(--text-color);
+    width: 100%;
+    margin-bottom: var(--mb-2);
+    line-height: 1.3rem;
+  }
+  .hero .hero-text .contact-me {
+    width: 80%;
+  }
+  .hero .hero-image {
+    height: 200px;
+    width: auto;
+    -ms-grid-row: 1;
+    -ms-grid-column: 2;
+    grid-area: 1/2;
+    position: relative;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: left;
+        -ms-flex-pack: left;
+            justify-content: left;
+    margin-bottom: var(--mb-2);
+  }
+  .hero .hero-image .hero-image-container {
+    position: relative;
+    height: 200px;
+    width: 200px;
+    border-radius: 47% 53% 49% 51% / 36% 30% 70% 64%;
+    background: var(--first-color);
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    overflow: hidden;
+  }
+}
+
+@media only screen and (max-width: 374px) and (min-width: 321px) {
   .hero {
     margin-top: 5rem;
     position: relative;
@@ -1078,6 +1235,60 @@ textarea {
   }
 }
 
+@media only screen and (max-width: 374px) and (min-width: 321px) {
+  .about {
+    height: auto;
+    padding: 0rem;
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+    top: 0%;
+    position: relative;
+  }
+  .about .about-image {
+    position: relative;
+  }
+  .about .about-image img {
+    width: 100%;
+    height: auto;
+    position: relative;
+    top: 0%;
+    left: 0%;
+    -webkit-transform: translate(0%, 0%);
+            transform: translate(0%, 0%);
+    border-radius: 15px;
+    display: block;
+  }
+  .about .about-text {
+    margin-top: 10rem;
+    width: 100%;
+    height: auto;
+    display: block;
+    padding: 0rem;
+    -webkit-transform: translateY(-100px);
+            transform: translateY(-100px);
+  }
+  .about .about-text .about-details-container {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 1fr 1fr 1fr;
+        grid-template-columns: 1fr 1fr 1fr;
+    grid-gap: 1rem;
+    color: var(--text-color);
+    margin-bottom: var(--mb-2);
+  }
+  .about .about-text .about-btn {
+    background-color: var(--first-color);
+    color: white;
+    text-decoration: none;
+    width: 65%;
+  }
+  .about .about-text .about-btn .icon {
+    margin-left: 0.5rem;
+  }
+}
+
 @media only screen and (max-width: 320px) {
   .about {
     height: auto;
@@ -1461,7 +1672,7 @@ textarea {
   color: var(--title-color);
 }
 
-@media only screen and (max-width: 768px) and (min-width: 426px) {
+@media only screen and (max-width: 768px) and (min-width: 665px) {
   .skills {
     height: 126vh;
     margin-bottom: 5rem;
@@ -1475,7 +1686,59 @@ textarea {
   }
 }
 
+@media only screen and (max-width: 664px) and (min-width: 426px) {
+  .skills {
+    height: 100%;
+    margin-bottom: 4rem;
+    position: relative;
+    display: block;
+    overflow: hidden;
+  }
+  .skills .skills-grid {
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+  }
+  .skills .skills-grid .front-end .skill-bar {
+    padding: 0rem;
+  }
+  .skills .skills-grid .back-end .skill-bar {
+    padding: 0rem;
+  }
+  .skills .skills-grid-center {
+    position: relative;
+    width: 100%;
+    padding: 0rem;
+    display: block;
+  }
+}
+
 @media only screen and (max-width: 425px) and (min-width: 375px) {
+  .skills {
+    height: 100%;
+    margin-bottom: 4rem;
+    position: relative;
+    display: block;
+    overflow: hidden;
+  }
+  .skills .skills-grid {
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+  }
+  .skills .skills-grid .front-end .skill-bar {
+    padding: 0rem;
+  }
+  .skills .skills-grid .back-end .skill-bar {
+    padding: 0rem;
+  }
+  .skills .skills-grid-center {
+    position: relative;
+    width: 100%;
+    padding: 0rem;
+    display: block;
+  }
+}
+
+@media only screen and (max-width: 374px) and (min-width: 321px) {
   .skills {
     height: 100%;
     margin-bottom: 4rem;
@@ -1856,7 +2119,7 @@ textarea {
   color: var(--title-color);
 }
 
-@media only screen and (max-width: 768px) and (min-width: 426px) {
+@media only screen and (max-width: 768px) and (min-width: 665px) {
   .skills {
     height: 126vh;
     margin-bottom: 5rem;
@@ -1870,7 +2133,59 @@ textarea {
   }
 }
 
+@media only screen and (max-width: 664px) and (min-width: 426px) {
+  .skills {
+    height: 100%;
+    margin-bottom: 4rem;
+    position: relative;
+    display: block;
+    overflow: hidden;
+  }
+  .skills .skills-grid {
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+  }
+  .skills .skills-grid .front-end .skill-bar {
+    padding: 0rem;
+  }
+  .skills .skills-grid .back-end .skill-bar {
+    padding: 0rem;
+  }
+  .skills .skills-grid-center {
+    position: relative;
+    width: 100%;
+    padding: 0rem;
+    display: block;
+  }
+}
+
 @media only screen and (max-width: 425px) and (min-width: 375px) {
+  .skills {
+    height: 100%;
+    margin-bottom: 4rem;
+    position: relative;
+    display: block;
+    overflow: hidden;
+  }
+  .skills .skills-grid {
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+  }
+  .skills .skills-grid .front-end .skill-bar {
+    padding: 0rem;
+  }
+  .skills .skills-grid .back-end .skill-bar {
+    padding: 0rem;
+  }
+  .skills .skills-grid-center {
+    position: relative;
+    width: 100%;
+    padding: 0rem;
+    display: block;
+  }
+}
+
+@media only screen and (max-width: 374px) and (min-width: 321px) {
   .skills {
     height: 100%;
     margin-bottom: 4rem;
@@ -2007,7 +2322,8 @@ textarea {
 
 @media only screen and (max-width: 716px) and (min-width: 426px) {
   .service-container {
-    padding: 1rem;
+    padding: 0rem;
+    margin-bottom: 4rem;
   }
   .service-container .service-card {
     -ms-grid-columns: 1fr;
@@ -2018,6 +2334,19 @@ textarea {
 }
 
 @media only screen and (max-width: 425px) and (min-width: 375px) {
+  .service-container {
+    padding: 0rem;
+    margin-bottom: 10rem;
+  }
+  .service-container .service-card {
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+    padding: 0rem;
+    height: auto;
+  }
+}
+
+@media only screen and (max-width: 374px) and (min-width: 321px) {
   .service-container {
     padding: 0rem;
     margin-bottom: 10rem;
@@ -2126,7 +2455,7 @@ textarea {
   text-decoration: none;
 }
 
-@media only screen and (max-width: 768px) and (min-width: 426px) {
+@media only screen and (max-width: 768px) and (min-width: 665px) {
   .portfolio {
     height: 84vh;
     margin-bottom: 0rem;
@@ -2140,7 +2469,85 @@ textarea {
   }
 }
 
+@media only screen and (max-width: 664px) and (min-width: 426px) {
+  .portfolio {
+    height: auto !important;
+    margin: -1rem -1rem 3rem -1rem;
+    padding: 0;
+    margin-bottom: 8rem;
+  }
+  .portfolio .title {
+    margin-bottom: var(--mb-1-5);
+  }
+  .portfolio .swiper-container {
+    height: auto;
+  }
+  .portfolio .swiper-container .swiper-button-next {
+    position: absolute !important;
+    right: 0;
+  }
+  .portfolio .swiper-container .swiper-button-next:after {
+    font-size: 1rem !important;
+  }
+  .portfolio .swiper-container .swiper-button-prev {
+    position: absolute !important;
+    left: 0;
+  }
+  .portfolio .swiper-container .swiper-button-prev:after {
+    font-size: 1rem !important;
+  }
+  .portfolio .swiper-container .swiper-slide {
+    display: block;
+    padding: 0;
+  }
+  .portfolio .swiper-container .swiper-slide .swiper-image {
+    margin-bottom: var(--mb-1);
+  }
+  .portfolio .swiper-container .swiper-slide .swiper-text {
+    padding: 0.2rem;
+  }
+}
+
 @media only screen and (max-width: 425px) and (min-width: 375px) {
+  .portfolio {
+    height: auto !important;
+    margin: -1rem -1rem 3rem -1rem;
+    padding: 0;
+    margin-bottom: 8rem;
+  }
+  .portfolio .title {
+    margin-bottom: var(--mb-1-5);
+  }
+  .portfolio .swiper-container {
+    height: auto;
+  }
+  .portfolio .swiper-container .swiper-button-next {
+    position: absolute !important;
+    right: 0;
+  }
+  .portfolio .swiper-container .swiper-button-next:after {
+    font-size: 1rem !important;
+  }
+  .portfolio .swiper-container .swiper-button-prev {
+    position: absolute !important;
+    left: 0;
+  }
+  .portfolio .swiper-container .swiper-button-prev:after {
+    font-size: 1rem !important;
+  }
+  .portfolio .swiper-container .swiper-slide {
+    display: block;
+    padding: 0;
+  }
+  .portfolio .swiper-container .swiper-slide .swiper-image {
+    margin-bottom: var(--mb-1);
+  }
+  .portfolio .swiper-container .swiper-slide .swiper-text {
+    padding: 0.2rem;
+  }
+}
+
+@media only screen and (max-width: 374px) and (min-width: 321px) {
   .portfolio {
     height: auto !important;
     margin: -1rem -1rem 3rem -1rem;
@@ -2270,6 +2677,12 @@ textarea {
   }
 }
 
+@media only screen and (max-width: 374px) and (min-width: 321px) {
+  .offer-container .offer {
+    width: 100%;
+  }
+}
+
 @media only screen and (max-width: 320px) {
   .offer-container .offer {
     width: 100%;
@@ -2375,6 +2788,22 @@ textarea {
   }
 }
 
+@media only screen and (max-width: 664px) and (min-width: 426px) {
+  .testimonials {
+    height: auto;
+  }
+  .testimonials .swiper-container {
+    padding: 0;
+  }
+  .testimonials .swiper-container .testimonial-person {
+    -webkit-box-shadow: none;
+            box-shadow: none;
+  }
+  .testimonials .swiper-container .swiper-slide {
+    width: 100% !important;
+  }
+}
+
 @media only screen and (max-width: 425px) and (min-width: 375px) {
   .testimonials {
     height: auto;
@@ -2384,6 +2813,19 @@ textarea {
   }
   .testimonials .swiper-container .swiper-slide {
     width: 100% !important;
+  }
+}
+
+@media only screen and (max-width: 374px) and (min-width: 321px) {
+  .testimonials {
+    height: auto;
+  }
+  .testimonials .swiper-container {
+    padding: 0;
+  }
+  .testimonials .swiper-container .swiper-slide {
+    width: 100% !important;
+    padding: 2rem 0rem;
   }
 }
 
@@ -2502,6 +2944,30 @@ textarea {
   }
 }
 
+@media only screen and (max-width: 664px) and (min-width: 426px) {
+  .contact .title {
+    margin-bottom: var(--mb-3);
+  }
+  .contact .contact-container {
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+  }
+  .contact .contact-container .contact-details {
+    padding: 1rem 1rem;
+  }
+  .contact .contact-container .message-me {
+    margin: 2rem 1rem;
+  }
+  .contact .contact-container .message-me .input-name {
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+    grid-gap: 0;
+  }
+  .contact .contact-container .message-me .message-btn {
+    width: 60% !important;
+  }
+}
+
 @media only screen and (max-width: 425px) and (min-width: 375px) {
   .contact .title {
     margin-bottom: var(--mb-3);
@@ -2523,6 +2989,30 @@ textarea {
   }
   .contact .contact-container .message-me .message-btn {
     width: 60%;
+  }
+}
+
+@media only screen and (max-width: 374px) and (min-width: 321px) {
+  .contact .title {
+    margin-bottom: var(--mb-3);
+  }
+  .contact .contact-container {
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+  }
+  .contact .contact-container .contact-details {
+    padding: 1rem 1rem;
+  }
+  .contact .contact-container .message-me {
+    margin: 2rem 1rem;
+  }
+  .contact .contact-container .message-me .input-name {
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+    grid-gap: 0;
+  }
+  .contact .contact-container .message-me .message-btn {
+    width: 60% !important;
   }
 }
 
@@ -2608,6 +3098,34 @@ textarea {
 .footer .footer-arr small {
   color: white;
   font-size: 0.8rem;
+}
+
+@media only screen and (max-width: 664px) and (min-width: 426px) {
+  .footer {
+    padding: 2rem;
+  }
+  .footer .links {
+    position: absolute;
+    top: 50%;
+    -webkit-transform: translateY(-50%);
+            transform: translateY(-50%);
+  }
+  .footer .footer-arr {
+    text-align: center;
+    position: absolute;
+    width: 100%;
+    left: 0%;
+    -webkit-transform: translateX(0%);
+            transform: translateX(0%);
+    bottom: 0;
+    padding-bottom: 0rem;
+  }
+  .footer .footer-arr small {
+    color: white;
+    font-size: 0.8rem;
+    width: 100%;
+    padding: 0;
+  }
 }
 
 @media only screen and (max-width: 425px) and (min-width: 320px) {
