--- a/src/stylesheet/_footer.scss
+++ b/src/stylesheet/_footer.scss
@@ -1,98 +1,43 @@
 .footer {
-  position: absolute;
-  left: 0;
-  display: flex;
-  justify-content: space-between;
+  padding: 2rem 4rem;
+  position: relative;
+  background: var(--card-color);
   width: 100%;
-  height: 50vh;
-  padding: 2rem 5rem;
-  background-color: var(--footer);
-  z-index: 20;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
   .logo {
-    h1 {
-      color: white;
-      font-size: var(--h1-font-size);
-    }
-    small {
-      color: white;
-      font-size: var(--small-font-size);
-    }
+    color: white;
   }
   .links {
     display: flex;
+    justify-content: space-around;
     .link {
-      text-decoration: none;
       color: white;
+      text-decoration: none;
+      font-size: var(--h2-font-size);
     }
   }
   .social-media-links {
-    a {
+    text-align: end;
+    color: white;
+    .icon {
       color: white;
-      margin-right: 0.5rem;
-      .social {
-        font-size: var(--h2-font-size);
+      font-size: var(--h1-font-size);
+    }
+    a {
+      &:nth-of-type(2) {
+        margin-right: 1rem;
+      }
+      &:nth-of-type(1) {
+        margin-right: 1rem;
       }
     }
   }
   .footer-arr {
     position: absolute;
+    bottom: 0;
     left: 50%;
     transform: translateX(-50%);
-    small {
-      color: rgb(255, 255, 255);
-      font-size: 0.8rem;
-    }
-    bottom: 0;
-    padding-bottom: 2rem;
-  }
-}
-@media only screen and (max-width: 664px) and (min-width: 426px) {
-  .footer {
-    padding: 2rem;
-    .links {
-      position: absolute;
-      top: 50%;
-      transform: translateY(-50%);
-    }
-    .footer-arr {
-      text-align: center;
-      position: absolute;
-      width: 100%;
-      left: 0%;
-      transform: translateX(0%);
-      small {
-        color: rgb(255, 255, 255);
-        font-size: 0.8rem;
-        width: 100%;
-        padding: 0;
-      }
-      bottom: 0;
-      padding-bottom: 0rem;
-    }
-  }
-}
-@media only screen and (max-width: 425px) and (min-width: 320px) {
-  .footer {
-    padding: 1rem;
-    .links {
-      position: absolute;
-      top: 50%;
-      transform: translateY(-50%);
-    }
-    .footer-arr {
-      text-align: center;
-      position: absolute;
-      width: 100%;
-      left: 0%;
-      transform: translateX(0%);
-      small {
-        color: rgb(255, 255, 255);
-        font-size: 0.8rem;
-        width: 100%;
-        padding: 0;
-      }
-      bottom: 0;
-      padding-bottom: 0rem;
-    }
+    color: white;
   }
 }
