--- a/src/stylesheet/_hero.scss
+++ b/src/stylesheet/_hero.scss
@@ -1,49 +1,52 @@
 .hero {
   position: relative;
-  height: calc(90vh - 10vh);
-  width: 100%;
   display: grid;
-  grid-template-columns: 15% 35% 50%;
-  // margin-top: 5rem;
+  grid-template-columns: repeat(2, 50%);
+  height: 90vh;
+  padding: 0rem;
+  margin-bottom: var(--mb-3);
   .hero-icons {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    .icon {
+    position: absolute;
+    display: grid;
+    grid-template-columns: 1fr;
+    top: 50%;
+    transform: translateY(-50%);
+    padding-left: 0.3rem;
+    a {
+      font-size: Max(1.8rem, 4%);
       color: var(--first-color);
-      margin-bottom: var(--mb-1);
-      font-size: var(--h3-font-size);
     }
   }
   .hero-text {
     display: flex;
     flex-direction: column;
-    margin: auto 0;
-    height: 40%;
+    justify-content: center;
+    padding: 0 0 0 10rem;
     h1 {
-      font-size: var(--big-font-size);
-      font-weight: var(--font-semi-bold);
+      font-size: Clamp(var(--big-font-size), 5vh, 3rem);
       color: var(--title-color);
+      margin-bottom: var(--mb-0-25);
     }
     small {
-      font-size: var(--normal-font-size);
+      font-size: Clamp(var(--small-font-size), 3vh, 0.8rem);
       color: var(--text-color);
-      margin-bottom: var(--mb-0-75);
+      margin-bottom: var(--mb-1);
     }
     p {
-      font-size: var(--small-font-size);
-      color: var(--text-color);
-      width: 60%;
+      font-size: Clamp(var(--normal-font-size), 3.5vh, 1rem);
+      line-height: 2rem;
+      width: Min(90%, 100%);
       margin-bottom: var(--mb-2);
-      line-height: 1.3rem;
+      color: var(--text-color);
     }
     .contact-me {
-      background-color: var(--first-color);
-      font-size: var(--normal-font-size);
-      text-decoration: none;
-      width: 45%;
+      background: var(--first-color);
+      width: Clamp(150px, 30%, 20rem);
+      padding: 0.6rem 1rem;
       text-align: center;
-      color: #fff;
+      border-radius: 10px;
+      color: white;
+      text-decoration: none;
       .icon {
         margin-left: 0.5rem;
       }
@@ -51,372 +54,21 @@
   }
   .hero-image {
     position: relative;
-    overflow: hidden;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    display: grid;
+    place-items: center;
     .hero-image-container {
-      position: relative;
-      height: 350px;
-      width: 350px;
-      border-radius: 47% 53% 49% 51% / 36% 30% 70% 64%;
-      background: var(--first-color);
-      display: flex;
-      justify-content: center;
-      align-items: center;
+      background-color: var(--first-color);
+      border-radius: 46% 54% 45% 55% / 25% 26% 74% 75%;
       overflow: hidden;
+      width: Min(350px, 80%);
+      height: Min(350px, 70%);
+      position: relative;
+      display: grid;
+      place-items: center;
       img {
-        object-fit: contain;
-        object-position: bottom;
+        width: 100%;
         height: 100%;
-      }
-    }
-  }
-}
-@media only screen and(max-width:768px) and (min-width: 717px) {
-  .hero {
-    margin-top: 5rem;
-    position: relative;
-    height: auto;
-    width: 100%;
-    display: grid;
-    grid-template-columns: 27% 73%;
-    margin-bottom: 8rem;
-
-    .hero-text {
-      grid-row-start: 2/3;
-      grid-column-start: 2/3;
-      display: flex;
-      height: fit-content;
-      width: 670px;
-      h1 {
-        font-size: var(--big-font-size);
-        font-weight: var(--font-semi-bold);
-        color: var(--title-color);
-      }
-      small {
-        font-size: var(--normal-font-size);
-        color: var(--text-color);
-        margin-bottom: var(--mb-0-75);
-      }
-      p {
-        font-size: var(--small-font-size);
-        color: var(--text-color);
-        width: 100%;
-        margin-bottom: var(--mb-2);
-        line-height: 1.3rem;
-      }
-    }
-    .hero-image {
-      height: 400px;
-      grid-area: 1/2;
-      position: relative;
-      display: flex;
-      align-items: center;
-      justify-content: left;
-      .hero-image-container {
-        position: relative;
-        height: 350px;
-        width: 350px;
-        border-radius: 47% 53% 49% 51% / 36% 30% 70% 64%;
-        background: var(--first-color);
-        display: flex;
-        justify-content: space-evenly;
-        align-items: center;
-        overflow: hidden;
-      }
-    }
-  }
-}
-@media only screen and(max-width:716px) and (min-width: 665px) {
-  .hero {
-    margin-top: 5rem;
-    position: relative;
-    height: auto;
-    width: 100%;
-    display: grid;
-    grid-template-columns: 27% 73%;
-    margin-bottom: 8rem;
-
-    .hero-text {
-      grid-row-start: 2/3;
-      grid-column-start: 2/3;
-      display: flex;
-      height: fit-content;
-      width: 500px;
-      h1 {
-        font-size: var(--big-font-size);
-        font-weight: var(--font-semi-bold);
-        color: var(--title-color);
-      }
-      small {
-        font-size: var(--normal-font-size);
-        color: var(--text-color);
-        margin-bottom: var(--mb-0-75);
-      }
-      p {
-        font-size: var(--small-font-size);
-        color: var(--text-color);
-        width: 100%;
-        margin-bottom: var(--mb-2);
-        line-height: 1.3rem;
-      }
-    }
-    .hero-image {
-      height: 400px;
-      width: auto;
-      grid-area: 1/2;
-      position: relative;
-      display: flex;
-      align-items: center;
-      justify-content: left;
-      .hero-image-container {
-        position: relative;
-        height: 350px;
-        width: 350px;
-        border-radius: 47% 53% 49% 51% / 36% 30% 70% 64%;
-        background: var(--first-color);
-        display: flex;
-        justify-content: space-evenly;
-        align-items: center;
-        overflow: hidden;
-      }
-    }
-  }
-}
-@media only screen and(max-width:664px) and (min-width: 426px) {
-  .hero {
-    margin-top: 5rem;
-    position: relative;
-    height: auto;
-    width: 100%;
-    display: grid;
-    grid-template-columns: 20% 80%;
-    margin-bottom: 8rem;
-
-    .hero-text {
-      grid-row-start: 2/3;
-      grid-column-start: 2/3;
-      display: flex;
-      height: fit-content;
-      width: 400px;
-      margin-top: 2rem;
-      h1 {
-        font-size: var(--big-font-size);
-        font-weight: var(--font-semi-bold);
-        color: var(--title-color);
-      }
-      small {
-        font-size: var(--normal-font-size);
-        color: var(--text-color);
-        margin-bottom: var(--mb-0-75);
-      }
-      p {
-        font-size: var(--small-font-size);
-        color: var(--text-color);
-        width: 100%;
-        margin-bottom: var(--mb-2);
-        line-height: 1.3rem;
-      }
-    }
-    .hero-image {
-      height: 250px;
-      width: auto;
-      grid-area: 1/2;
-      position: relative;
-      display: flex;
-      align-items: center;
-      justify-content: left;
-      .hero-image-container {
-        position: relative;
-        height: 250px;
-        width: 250px;
-        border-radius: 47% 53% 49% 51% / 36% 30% 70% 64%;
-        background: var(--first-color);
-        display: flex;
-        justify-content: space-evenly;
-        align-items: center;
-        overflow: hidden;
-      }
-    }
-  }
-}
-@media only screen and(max-width:425px) and (min-width: 375px) {
-  .hero {
-    margin-top: 5rem;
-    position: relative;
-    height: auto;
-    width: 100%;
-    display: grid;
-    grid-template-columns: 27% 73%;
-    margin-bottom: 8rem;
-
-    .hero-text {
-      grid-row-start: 2/3;
-      grid-column-start: 2/3;
-      display: flex;
-      height: fit-content;
-      width: 300px;
-      h1 {
-        font-size: var(--big-font-size);
-        font-weight: var(--font-semi-bold);
-        color: var(--title-color);
-      }
-      small {
-        font-size: var(--normal-font-size);
-        color: var(--text-color);
-        margin-bottom: var(--mb-0-75);
-      }
-      p {
-        font-size: var(--small-font-size);
-        color: var(--text-color);
-        width: 100%;
-        margin-bottom: var(--mb-2);
-        line-height: 1.3rem;
-      }
-      .contact-me {
-        width: 80%;
-      }
-    }
-    .hero-image {
-      height: 200px;
-      width: auto;
-      grid-area: 1/2;
-      position: relative;
-      display: flex;
-      align-items: center;
-      justify-content: left;
-      margin-bottom: var(--mb-2);
-      .hero-image-container {
-        position: relative;
-        height: 200px;
-        width: 200px;
-        border-radius: 47% 53% 49% 51% / 36% 30% 70% 64%;
-        background: var(--first-color);
-        display: flex;
-        justify-content: space-evenly;
-        align-items: center;
-        overflow: hidden;
-      }
-    }
-  }
-}
-@media only screen and(max-width:374px) and (min-width: 321px) {
-  .hero {
-    margin-top: 5rem;
-    position: relative;
-    height: auto;
-    width: 100%;
-    display: grid;
-    grid-template-columns: 27% 73%;
-    margin-bottom: 8rem;
-
-    .hero-text {
-      grid-row-start: 2/3;
-      grid-column-start: 2/3;
-      display: flex;
-      height: fit-content;
-      width: 300px;
-      h1 {
-        font-size: var(--big-font-size);
-        font-weight: var(--font-semi-bold);
-        color: var(--title-color);
-      }
-      small {
-        font-size: var(--normal-font-size);
-        color: var(--text-color);
-        margin-bottom: var(--mb-0-75);
-      }
-      p {
-        font-size: var(--small-font-size);
-        color: var(--text-color);
-        width: 100%;
-        margin-bottom: var(--mb-2);
-        line-height: 1.3rem;
-      }
-      .contact-me {
-        width: 80%;
-      }
-    }
-    .hero-image {
-      height: 200px;
-      width: auto;
-      grid-area: 1/2;
-      position: relative;
-      display: flex;
-      align-items: center;
-      justify-content: left;
-      margin-bottom: var(--mb-2);
-      .hero-image-container {
-        position: relative;
-        height: 200px;
-        width: 200px;
-        border-radius: 47% 53% 49% 51% / 36% 30% 70% 64%;
-        background: var(--first-color);
-        display: flex;
-        justify-content: space-evenly;
-        align-items: center;
-        overflow: hidden;
-      }
-    }
-  }
-}
-@media only screen and(max-width:320px) {
-  .hero {
-    margin-top: 5rem;
-    position: relative;
-    height: auto;
-    width: 100%;
-    display: grid;
-    grid-template-columns: 27% 73%;
-    margin-bottom: 8rem;
-
-    .hero-text {
-      grid-row-start: 2/3;
-      grid-column-start: 2/3;
-      display: flex;
-      height: fit-content;
-      width: 300px;
-      h1 {
-        font-size: var(--big-font-size);
-        font-weight: var(--font-semi-bold);
-        color: var(--title-color);
-      }
-      small {
-        font-size: var(--normal-font-size);
-        color: var(--text-color);
-        margin-bottom: var(--mb-0-75);
-      }
-      p {
-        font-size: var(--small-font-size);
-        color: var(--text-color);
-        width: 100%;
-        margin-bottom: var(--mb-2);
-        line-height: 1.3rem;
-      }
-      .contact-me {
-        width: 80%;
-      }
-    }
-    .hero-image {
-      height: 200px;
-      width: auto;
-      grid-area: 1/2;
-      position: relative;
-      display: flex;
-      align-items: center;
-      justify-content: left;
-      margin-bottom: var(--mb-2);
-      .hero-image-container {
-        position: relative;
-        height: 200px;
-        width: 200px;
-        border-radius: 47% 53% 49% 51% / 36% 30% 70% 64%;
-        background: var(--first-color);
-        display: flex;
-        justify-content: space-evenly;
-        align-items: center;
-        overflow: hidden;
+        object-fit: cover;
       }
     }
   }
