--- a/src/stylesheet/_navbar.scss
+++ b/src/stylesheet/_navbar.scss
@@ -1,5 +1,6 @@
 .nav-wrapper {
   position: fixed;
+  top: 0;
   width: 100%;
   max-width: 1400px;
   z-index: 100;
@@ -45,6 +46,7 @@
 }
 @media only screen and (min-width: 320px) and (max-width: 768px) {
   .nav-wrapper {
+    padding: 0 2rem;
     nav {
       .nav-links {
         display: none;
@@ -73,20 +75,20 @@
         transition: 0.5s ease-in;
         position: absolute;
         transform: translateY(0px);
-        top: 5rem;
+        top: 10vh;
         left: 0;
         display: flex;
         justify-content: center;
-        padding-top: 4rem;
+        padding-top: 0rem;
         flex-direction: column;
         background-color: var(--container-color);
         width: 100%;
-        height: 93vh;
+        height: calc(100vh - 10vh);
         position: absolute;
         text-align: center;
         .link {
-          font-size: 2rem;
-          margin-bottom: var(--mb-2);
+          font-size: 1.5rem;
+          margin-bottom: var(--mb-1);
         }
       }
     }
