--- a/src/stylesheet/_portfolio.scss
+++ b/src/stylesheet/_portfolio.scss
@@ -1,221 +1,54 @@
 .portfolio {
-  height: 90vh;
-  padding-top: 7rem;
-  margin-bottom: 8rem;
+  margin-bottom: 10rem;
   .title {
-    width: 100%;
     text-align: center;
+    margin-bottom: var(--mb-2);
     h1 {
-      color: var(--title-color);
       font-size: var(--big-font-size);
+      color: var(--title-color);
     }
     small {
+      font-size: var(--small-font-size);
       color: var(--text-color);
     }
   }
   .swiper-container {
-    height: 70vh;
-    padding: 0rem 3rem;
     .swiper-slide {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      position: relative;
+      display: grid;
+      grid-template-columns: repeat(2, 50%);
       width: 100%;
-      padding: 3rem;
       .swiper-image {
-        display: flex;
-        justify-content: center;
-        overflow: hidden;
-        border-radius: 10px;
+        padding: 0 2rem 0 4rem;
+        width: 100%;
+        display: grid;
+        place-items: center;
+        position: relative;
         img {
-          height: auto;
           width: 100%;
-          flex: none;
         }
       }
       .swiper-text {
-        padding: 2rem;
+        padding: 0 4rem 0 2rem;
+        display: grid;
+        place-items: center;
+        width: 100%;
         h2 {
-          font-size: var(--h3-font-size);
-          font-weight: var(--font-semi-bold);
-          margin-bottom: var(--mb-1);
+          font-size: var(--h2-font-size);
           color: var(--title-color);
+          margin-bottom: var(--mb-1);
         }
         p {
           font-size: var(--normal-font-size);
           color: var(--text-color);
-          margin-bottom: var(--mb-2);
+          margin-bottom: var(--mb-1);
         }
         .swiper-btn {
           background-color: var(--first-color);
+          padding: 0.6rem 1rem;
+          border-radius: 10px;
+          text-decoration: none;
           color: white;
           font-size: var(--normal-font-size);
-          text-decoration: none;
-        }
-      }
-    }
-  }
-}
-@media only screen and (max-width: 768px) and (min-width: 665px) {
-  .portfolio {
-    height: 84vh;
-    margin-bottom: 0rem;
-    .swiper-container {
-      .swiper-slide {
-        flex-direction: column;
-        height: 60vh;
-      }
-    }
-  }
-}
-@media only screen and (max-width: 664px) and (min-width: 426px) {
-  .portfolio {
-    height: auto !important;
-    margin: -1rem -1rem 3rem -1rem;
-    padding: 0;
-    margin-bottom: 8rem;
-    .title {
-      margin-bottom: var(--mb-1-5);
-    }
-    .swiper-container {
-      height: auto;
-      .swiper-button-next {
-        position: absolute !important;
-        right: 0;
-        &:after {
-          font-size: 1rem !important;
-        }
-      }
-      .swiper-button-prev {
-        position: absolute !important;
-        left: 0;
-        &:after {
-          font-size: 1rem !important;
-        }
-      }
-      .swiper-slide {
-        display: block;
-        padding: 0;
-        .swiper-image {
-          margin-bottom: var(--mb-1);
-        }
-        .swiper-text {
-          padding: 0.2rem;
-        }
-      }
-    }
-  }
-}
-@media only screen and (max-width: 425px) and (min-width: 375px) {
-  .portfolio {
-    height: auto !important;
-    margin: -1rem -1rem 3rem -1rem;
-    padding: 0;
-    margin-bottom: 8rem;
-    .title {
-      margin-bottom: var(--mb-1-5);
-    }
-    .swiper-container {
-      height: auto;
-      .swiper-button-next {
-        position: absolute !important;
-        right: 0;
-        &:after {
-          font-size: 1rem !important;
-        }
-      }
-      .swiper-button-prev {
-        position: absolute !important;
-        left: 0;
-        &:after {
-          font-size: 1rem !important;
-        }
-      }
-      .swiper-slide {
-        display: block;
-        padding: 0;
-        .swiper-image {
-          margin-bottom: var(--mb-1);
-        }
-        .swiper-text {
-          padding: 0.2rem;
-        }
-      }
-    }
-  }
-}
-@media only screen and (max-width: 374px) and (min-width: 321px) {
-  .portfolio {
-    height: auto !important;
-    margin: -1rem -1rem 3rem -1rem;
-    padding: 0;
-    margin-bottom: 8rem;
-    .title {
-      margin-bottom: var(--mb-1-5);
-    }
-    .swiper-container {
-      height: auto;
-      .swiper-button-next {
-        position: absolute !important;
-        right: 0;
-        &:after {
-          font-size: 1rem !important;
-        }
-      }
-      .swiper-button-prev {
-        position: absolute !important;
-        left: 0;
-        &:after {
-          font-size: 1rem !important;
-        }
-      }
-      .swiper-slide {
-        display: block;
-        padding: 0;
-        .swiper-image {
-          margin-bottom: var(--mb-1);
-        }
-        .swiper-text {
-          padding: 0.2rem;
-        }
-      }
-    }
-  }
-}
-@media only screen and (max-width: 320px) {
-  .portfolio {
-    height: auto !important;
-    margin: -1rem -1rem 3rem -1rem;
-    padding: 0;
-    margin-bottom: 8rem;
-    .title {
-      margin-bottom: var(--mb-1-5);
-    }
-    .swiper-container {
-      height: auto;
-      .swiper-button-next {
-        position: absolute !important;
-        right: 0;
-        &:after {
-          font-size: 1rem !important;
-        }
-      }
-      .swiper-button-prev {
-        position: absolute !important;
-        left: 0;
-        &:after {
-          font-size: 1rem !important;
-        }
-      }
-      .swiper-slide {
-        display: block;
-        padding: 0;
-        .swiper-image {
-          margin-bottom: var(--mb-1);
-        }
-        .swiper-text {
-          padding: 0.2rem;
         }
       }
     }
