--- a/src/stylesheet/_skills.scss
+++ b/src/stylesheet/_skills.scss
@@ -1,401 +1,335 @@
 .skills {
-  padding: 0rem;
-  min-height: 100vh;
-  height: 135vh;
+  margin-bottom: 10rem;
   .title {
     text-align: center;
-    margin-bottom: var(--mb-3);
+    margin-bottom: 2rem;
     h1 {
       font-size: var(--big-font-size);
       color: var(--title-color);
     }
     small {
+      font-size: var(--small-font-size);
       color: var(--text-color);
+      margin-bottom: var(--mb-3);
     }
   }
   .skills-grid {
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    text-align: center;
+    padding: 0rem 5rem;
+    grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
+    grid-gap: 3rem;
+    place-items: center;
     .front-end {
+      width: 100%;
       .skills-details-header {
-        .icon {
-          margin: 0;
+        text-align: center;
+        h2 {
+          font-size: var(--h2-font-size);
+          color: var(--title-color);
         }
-        .text {
-          h2 {
-            font-size: var(--h3-font-size);
-            color: var(--title-color);
-          }
-          small {
-            color: var(--text-color);
-          }
+        small {
+          font-size: var(--small-font-size);
+          color: var(--text-color);
         }
       }
       .skill-bar {
-        padding: 0 5rem;
-        display: flex;
-        flex-direction: column;
-        margin-bottom: 3rem;
         position: relative;
-        width: 100%;
         .skill-bar-text {
+          margin-bottom: var(--mb-2);
           position: relative;
           display: flex;
           justify-content: space-between;
-          margin-bottom: var(--mb-2);
-          &::after {
-            content: "";
-            position: absolute;
-            background-color: var(--text-color-light);
-            width: 100%;
-            height: 15px;
-            top: 1.5rem;
-            border-radius: 50px;
+          .skill-title {
+            color: var(--title-color);
+            &:after {
+              content: "";
+              position: absolute;
+              width: 100%;
+              height: 15px;
+              background-color: var(--text-color-light);
+              transform: translateY(1.5rem);
+              left: 0;
+              border-radius: 20px;
+            }
           }
-        }
-
-        .html:before {
-          content: "";
-          position: absolute;
-          background-color: var(--first-color);
-          width: 95%;
-          height: 15px;
-          top: 1.5rem;
-          border-radius: 50px;
-          z-index: 2;
-        }
-        .css:before {
-          content: "";
-          position: absolute;
-          background-color: var(--first-color);
-          width: 90%;
-          height: 15px;
-          top: 1.5rem;
-          border-radius: 50px;
-          z-index: 2;
-        }
-        .bs:before {
-          content: "";
-          position: absolute;
-          background-color: var(--first-color);
-          width: 92%;
-          height: 15px;
-          top: 1.5rem;
-          border-radius: 50px;
-          z-index: 2;
-        }
-        .js:before {
-          content: "";
-          position: absolute;
-          background-color: var(--first-color);
-          width: 70%;
-          height: 15px;
-          top: 1.5rem;
-          border-radius: 50px;
-          z-index: 2;
-        }
-        .react:before {
-          content: "";
-          position: absolute;
-          background-color: var(--first-color);
-          width: 40%;
-          height: 15px;
-          top: 1.5rem;
-          border-radius: 50px;
-          z-index: 2;
+          p {
+            color: var(--title-color);
+          }
+          .html {
+            &:before {
+              content: "";
+              position: absolute;
+              width: 95%;
+              height: 15px;
+              background-color: var(--first-color);
+              transform: translateY(1.5rem);
+              left: 0;
+              border-radius: 20px;
+              z-index: 2;
+            }
+          }
+          .css {
+            &:before {
+              content: "";
+              position: absolute;
+              width: 90%;
+              height: 15px;
+              background-color: var(--first-color);
+              transform: translateY(1.5rem);
+              left: 0;
+              border-radius: 20px;
+              z-index: 2;
+            }
+          }
+          .bs {
+            &:before {
+              content: "";
+              position: absolute;
+              width: 92%;
+              height: 15px;
+              background-color: var(--first-color);
+              transform: translateY(1.5rem);
+              left: 0;
+              border-radius: 20px;
+              z-index: 2;
+            }
+          }
+          .js {
+            &:before {
+              content: "";
+              position: absolute;
+              width: 70%;
+              height: 15px;
+              background-color: var(--first-color);
+              transform: translateY(1.5rem);
+              left: 0;
+              border-radius: 20px;
+              z-index: 2;
+            }
+          }
+          .react {
+            &:before {
+              content: "";
+              position: absolute;
+              width: 60%;
+              height: 15px;
+              background-color: var(--first-color);
+              transform: translateY(1.5rem);
+              left: 0;
+              border-radius: 20px;
+              z-index: 2;
+            }
+          }
         }
       }
     }
     .back-end {
+      width: 100%;
       .skills-details-header {
-        .icon {
-          margin: 0;
-        }
-        .text {
-          h2 {
-            font-size: var(--h3-font-size);
-            color: var(--title-color);
-          }
-          small {
-            color: var(--text-color);
-          }
-        }
-      }
-      .skill-bar {
-        padding: 0 5rem;
-        display: flex;
-        flex-direction: column;
-        margin-bottom: 3rem;
-        position: relative;
-        width: 100%;
-        .skill-bar-text {
-          position: relative;
-          display: flex;
-          justify-content: space-between;
-          margin-bottom: var(--mb-2);
-          &::after {
-            content: "";
-            position: absolute;
-            background-color: var(--text-color-light);
-            width: 100%;
-            height: 15px;
-            top: 1.5rem;
-            border-radius: 50px;
-          }
-        }
-
-        .php:before {
-          content: "";
-          position: absolute;
-          background-color: var(--first-color);
-          width: 80%;
-          height: 15px;
-          top: 1.5rem;
-          border-radius: 50px;
-          z-index: 2;
-        }
-        .ci:before {
-          content: "";
-          position: absolute;
-          background-color: var(--first-color);
-          width: 70%;
-          height: 15px;
-          top: 1.5rem;
-          border-radius: 50px;
-          z-index: 2;
-        }
-        .nj:before {
-          content: "";
-          position: absolute;
-          background-color: var(--first-color);
-          width: 30%;
-          height: 15px;
-          top: 1.5rem;
-          border-radius: 50px;
-          z-index: 2;
-        }
-        .sql:before {
-          content: "";
-          position: absolute;
-          background-color: var(--first-color);
-          width: 90%;
-          height: 15px;
-          top: 1.5rem;
-          border-radius: 50px;
-          z-index: 2;
-        }
-        .mdb:before {
-          content: "";
-          position: absolute;
-          background-color: var(--first-color);
-          width: 10%;
-          height: 15px;
-          top: 1.5rem;
-          border-radius: 50px;
-          z-index: 2;
-        }
-      }
-    }
-  }
-  .skills-grid-center {
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
-    color: var(--title-color);
-    padding: 0 5rem;
-    width: 60%;
-    .skills-details-header {
-      text-align: center;
-      .text {
+        text-align: center;
         h2 {
           font-size: var(--h2-font-size);
+          color: var(--title-color);
         }
         small {
+          font-size: var(--small-font-size);
           color: var(--text-color);
         }
       }
-    }
-    .skill-bar {
-      display: flex;
-      flex-direction: column;
-      margin-bottom: 3rem;
-      position: relative;
-      height: auto;
-      width: 100%;
-      .skill-bar-text {
+      .skill-bar {
         position: relative;
-        display: flex;
-        justify-content: space-between;
-        margin-bottom: var(--mb-2);
-        &::after {
-          content: "";
-          position: absolute;
-          background-color: var(--text-color-light);
-          width: 100%;
-          height: 15px;
-          top: 1.5rem;
-          border-radius: 50px;
+        .skill-bar-text {
+          margin-bottom: var(--mb-2);
+          position: relative;
+          display: flex;
+          justify-content: space-between;
+          p {
+            color: var(--title-color);
+          }
+          .skill-title {
+            color: var(--title-color);
+            &:after {
+              content: "";
+              position: absolute;
+              width: 100%;
+              height: 15px;
+              background-color: var(--text-color-light);
+              transform: translateY(1.5rem);
+              left: 0;
+              border-radius: 20px;
+            }
+          }
+        }
+        .php {
+          &:before {
+            content: "";
+            position: absolute;
+            width: 80%;
+            height: 15px;
+            background-color: var(--first-color);
+            transform: translateY(1.5rem);
+            left: 0;
+            border-radius: 20px;
+            z-index: 2;
+          }
+        }
+        .ci {
+          &:before {
+            content: "";
+            position: absolute;
+            width: 70%;
+            height: 15px;
+            background-color: var(--first-color);
+            transform: translateY(1.5rem);
+            left: 0;
+            border-radius: 20px;
+            z-index: 2;
+          }
+        }
+        .nj {
+          &:before {
+            content: "";
+            position: absolute;
+            width: 30%;
+            height: 15px;
+            background-color: var(--first-color);
+            transform: translateY(1.5rem);
+            left: 0;
+            border-radius: 20px;
+            z-index: 2;
+          }
+        }
+        .sql {
+          &:before {
+            content: "";
+            position: absolute;
+            width: 95%;
+            height: 15px;
+            background-color: var(--first-color);
+            transform: translateY(1.5rem);
+            left: 0;
+            border-radius: 20px;
+            z-index: 2;
+          }
+        }
+        .mdb {
+          &:before {
+            content: "";
+            position: absolute;
+            width: 10%;
+            height: 15px;
+            background-color: var(--first-color);
+            transform: translateY(1.5rem);
+            left: 0;
+            border-radius: 20px;
+            z-index: 2;
+          }
         }
       }
     }
-    .ui:before {
-      content: "";
-      position: absolute;
-      background-color: var(--first-color);
-      width: 70%;
-      height: 15px;
-      top: 1.5rem;
-      border-radius: 50px;
-      z-index: 2;
-    }
-    .csharp:before {
-      content: "";
-      position: absolute;
-      background-color: var(--first-color);
-      width: 75%;
-      height: 15px;
-      top: 1.5rem;
-      border-radius: 50px;
-      z-index: 2;
-    }
-    .java:before {
-      content: "";
-      position: absolute;
-      background-color: var(--first-color);
-      width: 80%;
-      height: 15px;
-      top: 1.5rem;
-      border-radius: 50px;
-      z-index: 2;
-    }
-  }
-  .skill-title,
-  p {
-    color: var(--title-color);
-  }
-}
-@media only screen and (max-width: 768px) and (min-width: 665px) {
-  .skills {
-    height: 126vh;
-    margin-bottom: 5rem;
-    .skills-grid {
-      grid-template-columns: 1fr;
-    }
-    .skills-grid-center {
+    .others {
       width: 100%;
-    }
-  }
-}
-@media only screen and (max-width: 664px) and (min-width: 426px) {
-  .skills {
-    height: 100%;
-    margin-bottom: 4rem;
-    position: relative;
-    display: block;
-    overflow: hidden;
-    .skills-grid {
-      grid-template-columns: 1fr;
-      .front-end {
-        .skill-bar {
-          padding: 0rem;
+      .skills-details-header {
+        text-align: center;
+        h2 {
+          font-size: var(--h2-font-size);
+          color: var(--title-color);
+        }
+        small {
+          font-size: var(--small-font-size);
+          color: var(--text-color);
         }
       }
-      .back-end {
-        .skill-bar {
-          padding: 0rem;
+      .skill-bar {
+        position: relative;
+        .skill-bar-text {
+          margin-bottom: var(--mb-2);
+          position: relative;
+          display: flex;
+          justify-content: space-between;
+          p {
+            color: var(--title-color);
+          }
+          .skill-title {
+            color: var(--title-color);
+            &:after {
+              content: "";
+              position: absolute;
+              width: 100%;
+              height: 15px;
+              background-color: var(--text-color-light);
+              transform: translateY(1.5rem);
+              left: 0;
+              border-radius: 20px;
+            }
+          }
+        }
+        .cs {
+          &:before {
+            content: "";
+            position: absolute;
+            width: 60%;
+            height: 15px;
+            background-color: var(--first-color);
+            transform: translateY(1.5rem);
+            left: 0;
+            border-radius: 20px;
+            z-index: 2;
+          }
+        }
+        .jav {
+          &:before {
+            content: "";
+            position: absolute;
+            width: 60%;
+            height: 15px;
+            background-color: var(--first-color);
+            transform: translateY(1.5rem);
+            left: 0;
+            border-radius: 20px;
+            z-index: 2;
+          }
+        }
+        .uxp {
+          &:before {
+            content: "";
+            position: absolute;
+            width: 80%;
+            height: 15px;
+            background-color: var(--first-color);
+            transform: translateY(1.5rem);
+            left: 0;
+            border-radius: 20px;
+            z-index: 2;
+          }
+        }
+        .ps {
+          &:before {
+            content: "";
+            position: absolute;
+            width: 50%;
+            height: 15px;
+            background-color: var(--first-color);
+            transform: translateY(1.5rem);
+            left: 0;
+            border-radius: 20px;
+            z-index: 2;
+          }
+        }
+        .ccna {
+          &:before {
+            content: "";
+            position: absolute;
+            width: 50%;
+            height: 15px;
+            background-color: var(--first-color);
+            transform: translateY(1.5rem);
+            left: 0;
+            border-radius: 20px;
+            z-index: 2;
+          }
         }
       }
-    }
-    .skills-grid-center {
-      position: relative;
-      width: 100%;
-      padding: 0rem;
-      display: block;
-    }
-  }
-}
-@media only screen and (max-width: 425px) and (min-width: 375px) {
-  .skills {
-    height: 100%;
-    margin-bottom: 4rem;
-    position: relative;
-    display: block;
-    overflow: hidden;
-    .skills-grid {
-      grid-template-columns: 1fr;
-      .front-end {
-        .skill-bar {
-          padding: 0rem;
-        }
-      }
-      .back-end {
-        .skill-bar {
-          padding: 0rem;
-        }
-      }
-    }
-    .skills-grid-center {
-      position: relative;
-      width: 100%;
-      padding: 0rem;
-      display: block;
-    }
-  }
-}
-@media only screen and (max-width: 374px) and (min-width: 321px) {
-  .skills {
-    height: 100%;
-    margin-bottom: 4rem;
-    position: relative;
-    display: block;
-    overflow: hidden;
-    .skills-grid {
-      grid-template-columns: 1fr;
-      .front-end {
-        .skill-bar {
-          padding: 0rem;
-        }
-      }
-      .back-end {
-        .skill-bar {
-          padding: 0rem;
-        }
-      }
-    }
-    .skills-grid-center {
-      position: relative;
-      width: 100%;
-      padding: 0rem;
-      display: block;
-    }
-  }
-}
-@media only screen and (max-width: 320px) {
-  .skills {
-    height: 100%;
-    margin-bottom: 4rem;
-    position: relative;
-    display: block;
-    overflow: hidden;
-    .skills-grid {
-      grid-template-columns: 1fr;
-      .front-end {
-        .skill-bar {
-          padding: 0rem;
-        }
-      }
-      .back-end {
-        .skill-bar {
-          padding: 0rem;
-        }
-      }
-    }
-    .skills-grid-center {
-      position: relative;
-      width: 100%;
-      padding: 0rem;
-      display: block;
     }
   }
 }
