--- a/src/stylesheet/_testimonials.scss
+++ b/src/stylesheet/_testimonials.scss
@@ -1,8 +1,5 @@
 .testimonials {
-  width: 100%;
-  height: 70vh;
-  position: relative;
-  margin-bottom: 7rem;
+  margin-bottom: 10rem;
   .title {
     text-align: center;
     h1 {
@@ -10,107 +7,29 @@
       color: var(--title-color);
     }
     small {
+      font-size: var(--small-font-size);
       color: var(--text-color);
     }
   }
   .swiper-container {
-    padding: 6rem;
-    position: relative;
-    height: 100%;
-    width: auto;
+    padding: 2rem;
     .testimonial-person {
-      padding: 4rem;
-      width: 50%;
-      height: 100%;
-      position: relative;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-      border-radius: 10px;
-      box-shadow: 1px 3px 15px 5px rgba(0, 0, 0, 0.21);
-      background: var(--testemonial);
-      .testimonial-image-name {
-        display: flex;
-        align-items: center;
+      display: grid;
+      grid-template-columns: 30% 70%;
+      .image {
+        display: grid;
+        place-items: center;
         img {
-          width: 100px;
-          height: 100px;
           border-radius: 50%;
-          margin-right: 1rem;
-        }
-        .name {
-          h3 {
-            font-size: var(--h3-font-size);
-            color: var(--title-color);
-          }
-          small {
-            font-size: var(--small-font-size);
-            color: var(--text-color);
-          }
         }
       }
       .testimonial-p {
-        p {
-          font-style: italic;
-          font-size: var(--normal-font-size);
-          color: var(--text-color);
+        display: grid;
+        place-items: center;
+        color: var(--text-color);
+        small {
+          margin-bottom: var(--mb-2);
         }
-      }
-    }
-  }
-}
-@media only screen and (max-width: 768px) and (min-width: 668px) {
-  .testimonials {
-    height: auto;
-    .title {
-      margin-bottom: 5rem;
-    }
-    .swiper-container {
-      .testimonial-person {
-        .testimonial-image-name {
-          flex-direction: column;
-          .name {
-            text-align: center;
-            margin-bottom: var(--mb-1);
-          }
-        }
-      }
-    }
-  }
-}
-@media only screen and (max-width: 664px) and (min-width: 426px) {
-  .testimonials {
-    height: auto;
-    .swiper-container {
-      padding: 0;
-      .testimonial-person {
-        box-shadow: none;
-      }
-      .swiper-slide {
-        width: 100% !important;
-      }
-    }
-  }
-}
-@media only screen and (max-width: 425px) and (min-width: 375px) {
-  .testimonials {
-    height: auto;
-    .swiper-container {
-      padding: 0;
-      .swiper-slide {
-        width: 100% !important;
-      }
-    }
-  }
-}
-@media only screen and (max-width: 374px) and (min-width: 321px) {
-  .testimonials {
-    height: auto;
-    .swiper-container {
-      padding: 0;
-      .swiper-slide {
-        width: 100% !important;
-        padding: 2rem 0rem;
       }
     }
   }
