--- a/src/stylesheet/style.scss
+++ b/src/stylesheet/style.scss
@@ -13,59 +13,35 @@ body {
   font-family: "Poppins", sans-serif;
   overflow-x: hidden;
   background: var(--container-color);
-  width: 100%;
-  margin: 0;
 }
 .container {
+  position: relative;
   max-width: 1400px;
   margin: 0 auto;
   background-color: var(--container-color);
-  position: relative;
 }
 .wrapper {
-  width: 100%;
-  height: auto;
-  padding: 1rem 3rem;
   position: relative;
-  top: 10vh;
-  position: absolute;
-  background-color: var(--container-color);
-}
+  width: 100%;
+  height: 100%;
 
+  margin-top: 9vh;
+  padding: 1rem 0rem;
+}
 li {
   list-style-type: none;
 }
-.btn {
-  padding: 0.8rem 1.5rem;
-  outline: none;
-  border: none;
-  border-radius: 10px;
-  cursor: pointer;
-}
-
 section {
-  min-height: 90vh;
-  position: relative;
   display: block;
-}
-@media only screen and (max-width: 768px) and (min-width: 320px) {
-  section {
-    height: 90vh;
-  }
 }
 input,
 textarea {
-  padding: 1rem;
+  padding: 0.8rem 1rem;
   border-radius: 10px;
   outline: none;
   border: none;
-  background-color: rgb(219, 219, 219);
+  background-color: rgb(230, 230, 230);
   margin-bottom: var(--mb-0-75);
-  color: var(--text-color);
-  font-size: var(--normal-font-size);
-}
-textarea {
-  font-size: 1rem;
 }
 //------------------SPECIFIC STYLES-----------------------------------
 
@@ -80,3 +56,6 @@ textarea {
 @import "./testimonials";
 @import "./contact";
 @import "./footer";
+@import "./mediaSmall";
+@import "./mediaMediumSp";
+@import "./mediaLargeTab";
