--- a/src/stylesheet/_portfolio.scss
+++ b/src/stylesheet/_portfolio.scss
@@ -25,6 +25,7 @@
         position: relative;
         img {
           width: 100%;
+          border-radius: 10px;
         }
       }
       .swiper-text {
@@ -40,7 +41,7 @@
         p {
           font-size: var(--normal-font-size);
           color: var(--text-color);
-          margin-bottom: var(--mb-1);
+          margin-bottom: var(--mb-2);
         }
         .swiper-btn {
           background-color: var(--first-color);
