--- a/src/stylesheet/_testimonials.scss
+++ b/src/stylesheet/_testimonials.scss
@@ -21,14 +21,24 @@
         place-items: center;
         img {
           border-radius: 50%;
+          height: 100%;
+          width: auto;
         }
       }
       .testimonial-p {
         display: grid;
         place-items: center;
-        color: var(--text-color);
+        height: 100%;
+        h3 {
+          color: var(--title-color);
+        }
         small {
-          margin-bottom: var(--mb-2);
+          color: var(--text-color);
+        }
+        p {
+          margin-top: 1rem;
+          color: var(--text-color);
+          font-style: italic;
         }
       }
     }
