--- a/src/stylesheet/_footer.scss
+++ b/src/stylesheet/_footer.scss
@@ -3,6 +3,8 @@
   position: relative;
   background: var(--card-color);
   width: 100%;
+  height: 100%;
+  margin-bottom: -5rem;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   .logo {
@@ -37,7 +39,10 @@
     position: absolute;
     bottom: 0;
     left: 50%;
+    text-align: center;
     transform: translateX(-50%);
     color: white;
+    width: 100%;
+    font-size: 0.8rem;
   }
 }
