updated footer social links

--- a/src/stylesheet/_mediaLargeTab.scss
+++ b/src/stylesheet/_mediaLargeTab.scss
@@ -161,6 +161,11 @@
       justify-content: space-between;
       align-items: center;
       margin-bottom: var(--mb-3);
+      a {
+        .icon {
+          font-size: 3rem;
+        }
+      }
     }
   }
 }
