--- a/src/stylesheet/_about.scss
+++ b/src/stylesheet/_about.scss
@@ -2,7 +2,9 @@
   position: relative;
   display: grid;
   grid-template-columns: repeat(2, 50%);
-  margin-bottom: 10rem;
+  max-width: 1400px;
+  margin: 0 auto;
+  margin-bottom: 5rem;
   .about-image {
     display: grid;
     place-items: center;
