--- a/src/stylesheet/_extras.scss
+++ b/src/stylesheet/_extras.scss
@@ -27,7 +27,7 @@
     --card-color: hsl(var(--hue-color), 69%, 61%);
     --footer: hsl(var(--hue-color), 69%, 61%);
     --testemonial: rgb(255, 255, 255);
-
+    --pagination-bullet: #4e1dff;;
     --mb-0-25: 0.25rem;
     --mb-0-5: 0.5rem;
     --mb-0-75: 0.75rem;
@@ -64,7 +64,7 @@
     --card-color: rgb(12, 12, 44);
     --footer: rgb(0, 0, 19);
     --testemonial: rgb(12, 12, 44);
-
+    --pagination-bullet: #f7f7f7;
     --mb-0-25: 0.25rem;
     --mb-0-5: 0.5rem;
     --mb-0-75: 0.75rem;
