--- a/src/stylesheet/_hero.scss
+++ b/src/stylesheet/_hero.scss
@@ -5,6 +5,8 @@
   height: 90vh;
   padding: 0rem;
   margin-bottom: var(--mb-3);
+  max-width: 1400px;
+  margin: 0 auto;
   .hero-icons {
     position: absolute;
     display: grid;
