--- a/src/stylesheet/_footer.scss
+++ b/src/stylesheet/_footer.scss
@@ -1,48 +1,60 @@
-.footer {
-  padding: 2rem 4rem;
-  position: relative;
+#footer {
   background: var(--card-color);
-  width: 100%;
-  height: 100%;
-  margin-bottom: -5rem;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  .logo {
-    color: white;
-  }
-  .links {
-    display: flex;
-    justify-content: space-around;
-    .link {
-      color: white;
-      text-decoration: none;
-      font-size: var(--h2-font-size);
-    }
-  }
-  .social-media-links {
-    text-align: end;
-    color: white;
-    .icon {
-      color: white;
-      font-size: var(--h1-font-size);
-    }
-    a {
-      &:nth-of-type(2) {
-        margin-right: 1rem;
-      }
-      &:nth-of-type(1) {
-        margin-right: 1rem;
-      }
-    }
-  }
-  .footer-arr {
-    position: absolute;
-    bottom: 0;
-    left: 50%;
-    text-align: center;
-    transform: translateX(-50%);
-    color: white;
+  .footer {
+    padding: 2rem 4rem;
+    position: relative;
     width: 100%;
-    font-size: 0.8rem;
+    height: 100%;
+    margin-bottom: -5rem;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    max-width: 1400px;
+    margin: 0 auto;
+
+    .logo {
+      color: white;
+    }
+
+    .links {
+      display: flex;
+      justify-content: space-around;
+
+      .link {
+        color: white;
+        text-decoration: none;
+        font-size: var(--h2-font-size);
+      }
+    }
+
+    .social-media-links {
+      text-align: end;
+      color: white;
+
+      .icon {
+        color: white;
+        font-size: var(--h1-font-size);
+      }
+
+      a {
+        &:nth-of-type(2) {
+          margin-right: 1rem;
+        }
+
+        &:nth-of-type(1) {
+          margin-right: 1rem;
+        }
+      }
+    }
+
+    .footer-arr {
+      position: absolute;
+      bottom: 0;
+      left: 50%;
+      text-align: center;
+      transform: translateX(-50%);
+      color: white;
+      width: 100%;
+      font-size: 0.8rem;
+    }
   }
 }
