--- a/src/stylesheet/_navbar.scss
+++ b/src/stylesheet/_navbar.scss
@@ -2,13 +2,14 @@
   position: fixed;
   top: 0;
   width: 100%;
-  max-width: 1400px;
   z-index: 100;
   background-color: var(--container-color);
   height: auto;
   padding: 0 3rem;
   box-shadow: 5px 5px 5px 0px rgba(0, 0, 0, 0.11);
   nav {
+    max-width: 1400px;
+    margin: 0 auto;
     display: flex;
     width: 100%;
     justify-content: space-between;
