--- a/src/stylesheet/_portfolio.scss
+++ b/src/stylesheet/_portfolio.scss
@@ -1,4 +1,6 @@
 .portfolio {
+  max-width: 1400px;
+  margin: 0 auto;
   margin-bottom: 10rem;
   .title {
     text-align: center;
@@ -13,15 +15,13 @@
     }
   }
   .swiper-container {
+    min-height: 500px;
     .swiper-pagination {
       bottom: 0 !important;
     }
     .swiper-slide {
-      display: grid;
-      grid-template-columns: repeat(2, 50%);
       width: 100%;
       .swiper-image {
-        padding: 0 2rem 0 4rem;
         width: 100%;
         display: grid;
         place-items: center;
@@ -32,7 +32,6 @@
         }
       }
       .swiper-text {
-        padding: 0 4rem 0 2rem;
         display: grid;
         place-items: center;
         width: 100%;
@@ -45,6 +44,11 @@
           font-size: var(--normal-font-size);
           color: var(--text-color);
           margin-bottom: var(--mb-2);
+          display: -webkit-box;
+          -webkit-line-clamp: 4;
+          -webkit-box-orient: vertical;
+          overflow: hidden;
+          
         }
         .swiper-btn {
           background-color: var(--first-color);
@@ -57,4 +61,7 @@
       }
     }
   }
+}
+.swiper-pagination-bullet{
+  background: var(--pagination-bullet) ;
 }
