--- a/src/stylesheet/_service.scss
+++ b/src/stylesheet/_service.scss
@@ -1,4 +1,6 @@
 .service-container {
+  max-width: 1400px;
+  margin: 0 auto;
   margin-bottom: 10rem;
   .title {
     text-align: center;
@@ -18,9 +20,9 @@
     grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
     grid-gap: 3rem;
     place-items: center;
+    margin-top: 5rem!important;
     .card {
       width: 100%;
-      height: 30vh;
       box-shadow: 1px 3px 10px 4px rgba(0, 0, 0, 0.11);
       border-radius: 10px;
       padding: 2rem;
@@ -44,9 +46,6 @@
         margin-left: -5px;
         &:hover {
           transition: 0.5s;
-          background-color: var(--first-color);
-          color: white;
-          border-radius: 10px;
         }
       }
     }
