--- a/src/stylesheet/_skills.scss
+++ b/src/stylesheet/_skills.scss
@@ -1,4 +1,7 @@
 .skills {
+  max-width: 1400px;
+  margin: 0 auto;
+  margin-top: 10rem;
   margin-bottom: 10rem;
   .title {
     text-align: center;
