--- a/src/stylesheet/_about.scss
+++ b/src/stylesheet/_about.scss
@@ -66,3 +66,10 @@
     }
   }
 }
+@media only screen and (max-width: 425px) and (min-width: 321px){
+  .about .about-image img {
+    height: auto!important;
+    width: 100%!important;
+    padding: 0 2rem;
+  }
+}
